--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,4 +1,4 @@
-# ÅäÖÃÊı¾İÔ´
+# druidè¿æ¥é…ç½®
 datasource.druid.name=one,two
 
 datasource.druid.one.url=jdbc:mysql://115.159.34.194:3306/mydb?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=round&allowMultiQueries=true
