--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,9 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 
-        <flink.version>1.12.5</flink.version>
+        <flink.version>1.13.3</flink.version>
         <scala.version>2.12</scala.version>
 		<slf4j.version>1.7.21</slf4j.version>
-		<flink-connector-mysql-cdc.version>1.4.0</flink-connector-mysql-cdc.version>
         <debezium.version>1.5.4.Final</debezium.version>
 
     </properties>
@@ -44,22 +43,42 @@
 			<artifactId>flink-clients_${scala.version}</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <!--<dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka_${scala.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>-->
+
+        <!--<dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-base</artifactId>
+            <version>1.13.3</version>
+        </dependency>-->
 		
 		<!-- cdc mysqlsource 依赖 -->
-		<dependency>
+		<!--<dependency>
 			<groupId>com.alibaba.ververica</groupId>
 			<artifactId>flink-connector-mysql-cdc</artifactId>
 			<version>1.4.0</version>
-		</dependency>
-		<!--<dependency>
-            <groupId>com.alibaba.ververica</groupId>
-            <artifactId>flink-connector-debezium</artifactId>
-            <version>1.4.0</version>
-        </dependency>-->
+		</dependency>-->
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-sql-connector-mysql-cdc</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
         <!--<dependency>
             <groupId>com.ververica</groupId>
-            <artifactId>flink-connector-debezium</artifactId>
-            <version>2.0.2</version>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.1.0</version>
         </dependency>-->
 
 		<!-- log4j日志相关坐标 -->
@@ -92,6 +111,7 @@
             <artifactId>druid</artifactId>
             <version>1.2.8</version>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
