--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,14 @@
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <maven-assembly.version>3.3.0</maven-assembly.version>
 
-        <flink.version>1.12.5</flink.version>
-        <scala.version>2.12</scala.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <mysql-cdc.version>1.4.0</mysql-cdc.version>
-        <fastjson.version>1.2.78</fastjson.version>
-        <lombok.version>1.18.22</lombok.version>
-        <druid.version>1.2.8</druid.version>
-        <mysql-connector.version>8.0.27</mysql-connector.version>
+        <flink.version>1.17.1</flink.version>
+        <mysql-cdc.version>2.3.0</mysql-cdc.version>
+        <slf4j.version>1.7.36</slf4j.version>
+        <log4j.version>2.20.0</log4j.version>
+        <fastjson.version>2.0.33</fastjson.version>
+        <lombok.version>1.18.24</lombok.version>
+        <druid.version>1.2.18</druid.version>
+        <mysql-connector.version>8.0.33</mysql-connector.version>
         <hadoop.version>3.0.0</hadoop.version>
 
     </properties>
@@ -41,20 +41,38 @@
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_${scala.version}</artifactId>
+            <artifactId>flink-streaming-java</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_${scala.version}</artifactId>
+            <artifactId>flink-clients</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-base</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
         <!-- cdc mysqlsource 依赖 -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba.ververica</groupId>
             <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>${mysql-cdc.version}</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-sql-connector-mysql-cdc</artifactId>
             <version>${mysql-cdc.version}</version>
         </dependency>
 
@@ -65,10 +83,37 @@
             <version>${slf4j.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>-->
+
+        <!--<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
@@ -89,9 +134,14 @@
             <version>${druid.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector.version}</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <version>${mysql-connector.version}</version>
         </dependency>
 
