--- a/pom.xml
+++ b/pom.xml
@@ -117,8 +117,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
 
@@ -146,11 +146,11 @@
         </dependency>
 
         <!-- hadoop 依赖 包含了Gson库-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
