--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,11 @@
         <mysql-cdc.version>2.3.0</mysql-cdc.version>
         <slf4j.version>1.7.36</slf4j.version>
         <log4j.version>2.20.0</log4j.version>
-        <fastjson.version>2.0.33</fastjson.version>
+        <!--<fastjson.version>2.0.33</fastjson.version>-->
+        <fastjson.version>1.2.83</fastjson.version>
         <lombok.version>1.18.24</lombok.version>
         <druid.version>1.2.18</druid.version>
-        <mysql-connector.version>8.0.33</mysql-connector.version>
+        <mysql-connector.version>8.0.30</mysql-connector.version>
         <hadoop.version>3.0.0</hadoop.version>
 
     </properties>
@@ -172,8 +173,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
 
@@ -189,17 +190,17 @@
             <version>${druid.version}</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector.version}</version>
-        </dependency>-->
+        </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>${mysql-connector.version}</version>
-        </dependency>
+        </dependency>-->
 
         <!-- hadoop 依赖 包含了Gson库-->
         <!--<dependency>
