--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         </dependency>
 
         <!-- cdc mysql 依赖 -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.ververica</groupId>
             <artifactId>flink-connector-mysql-cdc</artifactId>
             <version>${mysql-cdc.version}</version>
@@ -83,10 +83,10 @@
                     <groupId>mysql</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
         <!-- cdc debezium 依赖 -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.ververica</groupId>
             <artifactId>flink-connector-debezium</artifactId>
             <version>${mysql-cdc.version}</version>
@@ -136,13 +136,19 @@
                     <groupId>com.github.luben</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
-        <!--<dependency>
+        <dependency>
             <groupId>com.ververica</groupId>
             <artifactId>flink-sql-connector-mysql-cdc</artifactId>
             <version>${mysql-cdc.version}</version>
-        </dependency>-->
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!-- log4j日志相关坐标 -->
         <dependency>
